--- a/ITunesShortcuts/ITunesShortcuts.csproj
+++ b/ITunesShortcuts/ITunesShortcuts.csproj
@@ -20,6 +20,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 	  <None Remove="Assets\icon.png" />
+	  <None Remove="Views\HomeView.xaml" />
 	  <None Remove="Views\LoggerView.xaml" />
 	  <None Remove="Views\MainView.xaml" />
 	</ItemGroup>
@@ -46,10 +47,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="ViewModels\" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <Content Update="Assets\icon.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
@@ -59,6 +56,9 @@
 	  <None Update="icon.ico">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <Page Update="Views\HomeView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 
 	<ItemGroup>
